--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,16 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "commonjs": true,
+        "es6": true,
+        "node": true
     },
     "extends": [
         "airbnb",
         "eslint:recommended"
     ],
     "parserOptions": {
-        "ecmaVersion": 12,
+        "ecmaVersion": 2019,
         "sourceType": "module"
     },
     "rules": {
