--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll --verbose",
     "check": "lint-staged",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix"
@@ -24,11 +24,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.22.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "git-commit-msg-linter": "^3.0.4",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4"
-  }
+  },
+  "dependencies": {}
 }
