--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,6 @@
         "sourceType": "module"
     },
     "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
         "linebreak-style": [
             "error",
             "unix"
@@ -29,6 +25,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "class-methods-use-this": "off"
     }
 }
