test: add ProductFactory test when NaN params

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
             "error",
             "always"
         ],
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "no-restricted-globals": "off"
     }
 }
