feat: add CarInsurance entity and tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
             "always"
         ],
         "class-methods-use-this": "off",
-        "no-restricted-globals": "off"
+        "no-restricted-globals": "off",
+        "no-plusplus": "off"
     }
 }
