feat: add Low and Medium Coverage Product and test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
         ],
         "class-methods-use-this": "off",
         "no-restricted-globals": "off",
-        "no-plusplus": "off"
+        "no-plusplus": "off",
+        "no-underscore-dangle": "off"
     }
 }
