--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest --watchAll --verbose",
+    "test": "jest --watchAll --verbose --coverage",
+    "after-30-days": "node src/index.js",
     "check": "lint-staged",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix"
