--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest --watchAll --verbose --coverage",
+    "server": "node src/server.js",
+    "test": "jest --coverage",
     "after-30-days": "node src/index.js",
     "check": "lint-staged",
     "lint": "eslint .",
@@ -36,5 +37,8 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
